--- a/appserver/package.json
+++ b/appserver/package.json
@@ -13,7 +13,8 @@
     "next": "15.5.0",
     "node-telegram-bot-api": "^0.66.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tronweb": "^6.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
