--- a/appserver/.sample.env
+++ b/appserver/.sample.env
@@ -4,3 +4,4 @@ TRON_FULL_NODE_URL=https://api.trongrid.io
 TRON_ADMIN_PRIVATE_KEY=your_private_key
 NEXT_PUBLIC_PAYMI_INVOICE_CONTRACT_ADDRESS=your_contract_address
 NEXT_PUBLIC_USDT_CONTRACT_ADDRESS=
+NEXT_PUBLIC_APP_URL=
