--- a/appserver/.sample.env
+++ b/appserver/.sample.env
@@ -5,3 +5,6 @@ TRON_ADMIN_PRIVATE_KEY=your_private_key
 NEXT_PUBLIC_PAYMI_INVOICE_CONTRACT_ADDRESS=your_contract_address
 NEXT_PUBLIC_USDT_CONTRACT_ADDRESS=
 NEXT_PUBLIC_APP_URL=
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+GEMINI_API_KEY=
